SB Banner removed

--- a/pages/intake-form.html
+++ b/pages/intake-form.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/intake-form by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:23 GMT -->
+<!-- Mirrored from site/intake-form by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:23 GMT -->
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1164,5 +1164,5 @@ $(function () {
 </body>
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/intake-form by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:23 GMT -->
+<!-- Mirrored from site/intake-form by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:23 GMT -->
 </html>
