--- a/pages/landscape-design.html
+++ b/pages/landscape-design.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/landscape-design by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:42 GMT -->
+<!-- Mirrored from site/landscape-design by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:42 GMT -->
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1079,5 +1079,5 @@ $(function() {
 </body>
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/landscape-design by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:42 GMT -->
+<!-- Mirrored from site/landscape-design by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:42 GMT -->
 </html>
