--- a/pages/our-team.html
+++ b/pages/our-team.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/our-team by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:53 GMT -->
+<!-- Mirrored from site/our-team by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:53 GMT -->
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1071,5 +1071,5 @@ $(function() {
 </body>
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/our-team by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:53 GMT -->
+<!-- Mirrored from site/our-team by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:53 GMT -->
 </html>
