--- a/pages/scheduling.html
+++ b/pages/scheduling.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/scheduling by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:59 GMT -->
+<!-- Mirrored from site/scheduling by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:59 GMT -->
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1732,5 +1732,5 @@ $(function () {
 </body>
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/scheduling by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:22:00 GMT -->
+<!-- Mirrored from site/scheduling by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:22:00 GMT -->
 </html>
