--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:19 GMT -->
+<!-- Mirrored from site/index by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:19:18 GMT -->
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -202,33 +202,6 @@
   <span class="skip-to-main-content__text">Skip to main content</span>
 </a>
 
-  
-
-  <div id="sb-banner" style="visibility: hidden;">
-    
-
-
-
-  <section class="sb-section sb-section-opt-dark option-align-center option-width-12col">
-    <div class="container sb-container-fixed sb-container">
-      <div class="sb-banner option-width sb-section-alignable" data-persist="true">
-        <div class="sb-banner__content">
-          <div class="sb-paragraph sb-section-alignable">
-            <span>
-              <p>Website designed with the B12 website builder. Create your own website today.</p>
-            </span>
-            <span>
-              <a class="sb-cta-wrapper__btn sb-button sb-button--primary" href="https://www.b12.io/ai-web-design/?utm_source=client&amp;utm_medium=banner&amp;utm_campaign=ai-web-design" rel="noreferrer" target="_blank">Start for free</a>
-            </span>
-          </div>
-        </div>
-      </div>
-      <button class="sb-banner__close"><div class="sb-banner__close-icon"></div></button>
-    </div>
-  </section>
-
-
-  </div>
 
   <div id="sb-navigation">
     <!--htmlhint attr-no-duplication:false -->
@@ -1713,5 +1686,5 @@ Photography: Dylan James - https://dylanjames.com.au/" loading="lazy" src="../cd
 </body>
 
 
-<!-- Mirrored from bodhi-space-j5vd.b12sites.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:19 GMT -->
+<!-- Mirrored from site/index by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 10:21:19 GMT -->
 </html>
