Deleted unwanted files

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="wrapper sb-top-header sb-top-header--cta-nav" data-sb-uuid="310d2264-2548-4bfa-80d8-a6278da72392" id="sb-top-nav-310d2264-2548-4bfa-80d8-a6278da72392">
 <a class="sb-top-header__brand brand" href="index.html" skip-data-sb="">
 
-      <img alt="bodhi space studio logo.gif" class="logo" src="../cdn.b12.io/client_media/vHEtyVtR/086a4a04-fc7f-11ee-a177-0242ac110002-Bodhi_Space_Studio_Logo.gif">
+      <img alt="bodhi space studio logo.gif" class="logo" src="cdn.b12.io/client_media/vHEtyVtR/086a4a04-fc7f-11ee-a177-0242ac110002-Bodhi_Space_Studio_Logo.gif">
 
   </a>
 
