--- a/site/scheduling.html
+++ b/site/scheduling.html
@@ -17,7 +17,7 @@
     <link rel="canonical" href="scheduling.html">
   
 
-  <script src="..//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
   
     <title>Meeting request form</title>
@@ -259,7 +259,7 @@
     <div class="wrapper sb-top-header sb-top-header--cta-nav" data-sb-uuid="310d2264-2548-4bfa-80d8-a6278da72392" id="sb-top-nav-310d2264-2548-4bfa-80d8-a6278da72392">
 <a class="sb-top-header__brand brand" href="index.html" skip-data-sb="">
     
-      <img alt="bodhi space studio logo.gif" class="logo" src="..//cdn.b12.io/client_media/vHEtyVtR/086a4a04-fc7f-11ee-a177-0242ac110002-Bodhi_Space_Studio_Logo.gif">
+      <img alt="bodhi space studio logo.gif" class="logo" src="../cdn.b12.io/client_media/vHEtyVtR/086a4a04-fc7f-11ee-a177-0242ac110002-Bodhi_Space_Studio_Logo.gif">
     
   </a>
   
@@ -1660,7 +1660,7 @@ $(function () {
 
   
     <script type="text/javascript">
-    !function(b12){var e=b12.createElement("script"),t=b12.getElementsByTagName("script")[0];e.async=1,e.src="..//cdn.b12.io/prod_traffic/global.js",t.parentNode.insertBefore(e,t)}(document);
+    !function(b12){var e=b12.createElement("script"),t=b12.getElementsByTagName("script")[0];e.async=1,e.src="../cdn.b12.io/prod_traffic/global.js",t.parentNode.insertBefore(e,t)}(document);
     </script>
   
 
@@ -1671,7 +1671,7 @@ $(function () {
   
   
   
-    <script src="..//www.google.com/recaptcha/apifb47.js?render=6Ld1R8kUAAAAAGEYGyd1RXFcdSGY03uF4y_yN40A" async="true"></script>
+    <script src="../www.google.com/recaptcha/apifb47.js?render=6Ld1R8kUAAAAAGEYGyd1RXFcdSGY03uF4y_yN40A" async="true"></script>
   
 
   
