--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         
           <li class="sb-nav__item  " data-component-field="navigationLink" data-sb-field="" data-sb-is-link="true" data-sb-type="" data-sb-uuid="287addc9-dd61-458d-8253-b73e7891639e">
 <a class=" sb-nav__link sb-link " data-component-field="navigationLink" data-sb-field="" data-sb-is-link="true" data-sb-type="" data-sb-uuid="287addc9-dd61-458d-8253-b73e7891639e" href="index.html#about" target="">
-              About
+              About US
             </a>
             
           </li>
