Refactor index.html

--- a/intake-form.html
+++ b/intake-form.html
@@ -809,8 +809,8 @@ $(function () {
 
 </p>
           <div data-aos="slide-up" data-aos-offset="120" data-aos-delay="150" data-aos-duration="400" data-aos-easing="ease-in-out" data-aos-once="true" class="sb-contact-form contact-form option-width sb-section-alignable" data-sb-uuid="5f1b8132-f134-45a4-bc3b-bc2ac4bd48fb" id="contact-form-5f1b8132-f134-45a4-bc3b-bc2ac4bd48fb">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrfI3K6e8ivFKDpLx0CDyP05TfBP-gn515qrZrji5VyadO8g/viewform?embedded=true" width="640" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrfI3K6e8ivFKDpLx0CDyP05TfBP-gn515qrZrji5VyadO8g/viewform?embedded=true" width="640" height="1068" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
   
 </div>
