--- a/index.html
+++ b/index.html
@@ -1363,10 +1363,13 @@ Photography: Dylan James - https://dylanjames.com.au/" loading="lazy" src="cdn.b
 <a aria-label="Email us at info@bodhispace.in" class="email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91" href="mailto:bodhi.space24@gmail.com">info@bodhispace.in</a>
 </div>
 
-                    <div class="contact-details__email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91">
-<svg height="8px" version="1.1" viewBox="0 0 12 8" width="12px" xmlns="http://www.w3.org/2000/svg"><path d="M0 8h11.2V0H0v8zm5.6-2.673l1.095-.914 3.522 2.947H.983l3.522-2.947 1.095.914zm1.594-1.33l3.366-2.81v5.626L7.194 3.996zM5.6 4.492L.985.64h9.23L5.6 4.493zm-1.594-.497L.64 6.813V1.186l3.366 2.81z" fill-rule="nonzero" stroke="none" stroke-width="1"></path></svg>
-<a aria-label="Email us at info@bodhispace.in" class="email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91" href="mailto:bodhi.space24@gmail.com">info@bodhispace.in</a>
+                <div class="contact-details__phone" data-component-field="contact" data-sb-field="phone" data-sb-is-link="" data-sb-type="phone" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91">
+    <svg height="12px" version="1.1" viewBox="0 0 12 12" width="12px" xmlns="http://www.w3.org/2000/svg">
+        <path d="M3.654 0c-.964 0-1.747.75-1.938 1.698-.292 1.434.209 3.101 1.426 4.865 1.216 1.764 2.686 3.062 4.168 3.734 1.482.672 2.928.607 3.922-.213a2.25 2.25 0 00.316-3.016l-1.31-1.562a1.25 1.25 0 00-1.806-.183L7.487 6.323a1.5 1.5 0 01-1.445.27c-.866-.341-1.828-1.047-2.623-2.007-.795-.96-1.336-2.016-1.55-2.874a1.5 1.5 0 01.387-1.398L3.64.847a1.25 1.25 0 00.016-1.847L3.654 0z" fill-rule="nonzero" stroke="none" stroke-width="1"></path>
+    </svg>
+    <a aria-label="Call us at 9080535435" class="phone" data-component-field="contact" data-sb-field="phone" data-sb-is-link="" data-sb-type="phone" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91" href="tel:9080535435">9080535435</a>
 </div>
+
               
 
               
