Corrected Contact us text

--- a/index.html
+++ b/index.html
@@ -1277,10 +1277,9 @@ Photography: Dylan James - https://dylanjames.com.au/" loading="lazy" src="cdn.b
               
                 <div class="contact-details__email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91">
 <svg height="8px" version="1.1" viewBox="0 0 12 8" width="12px" xmlns="http://www.w3.org/2000/svg"><path d="M0 8h11.2V0H0v8zm5.6-2.673l1.095-.914 3.522 2.947H.983l3.522-2.947 1.095.914zm1.594-1.33l3.366-2.81v5.626L7.194 3.996zM5.6 4.492L.985.64h9.23L5.6 4.493zm-1.594-.497L.64 6.813V1.186l3.366 2.81z" fill-rule="nonzero" stroke="none" stroke-width="1"></path></svg>
-                    <p>If you are looking for beautiful and sustainable homes in and around Coimbatore, please fell free to call on +91_______________________ or
-<a aria-label="email us at info@bodhispace.in" class="email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91" href="mailto:info@bodhispace.in">info@bodhispace.in</a>
 
-We would love to hear from you, if you are someone interested in working with our team or pursuing a career with us. </p>
+<a aria-label="Email us at info@bodhispace.in" class="email" data-component-field="contact" data-sb-field="email" data-sb-is-link="" data-sb-type="email" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91" href="mailto:info@bodhispace.in">info@bodhispace.in</a>
+
 </div>
 
                 <div class="contact-details__phone" data-component-field="contact" data-sb-field="phone" data-sb-is-link="" data-sb-type="phone" data-sb-uuid="f9c1641a-364c-4daf-a77e-5d4bd18a8f91">
